@@ -1,3 +1,9 @@
+2012-11-03 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m
+	* DBSoapCSV.m
+	Multi-key identify in batch and non-batch mode.
+
 2012-11-02 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.h
